src/test/ui/closures/2229_closure_analysis/capture-analysis-4.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/capture-analysis-4.rs:21:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/capture-analysis-4.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/capture-analysis-4.rs:24:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _x = a.b;
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing a[(0, 0)] -> ByValue
  --> $DIR/capture-analysis-4.rs:27:18
   |
LL |         let _x = a.b;
   |                  ^^^
note: Capturing a[(0, 0),(0, 0)] -> ImmBorrow
  --> $DIR/capture-analysis-4.rs:30:26
   |
LL |         println!("{:?}", a.b.c);
   |                          ^^^^^

error: Min Capture analysis includes:
  --> $DIR/capture-analysis-4.rs:24:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _x = a.b;
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture a[(0, 0)] -> ByValue
  --> $DIR/capture-analysis-4.rs:27:18
   |
LL |         let _x = a.b;
   |                  ^^^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
